--- a/css/capelloStyle.css
+++ b/css/capelloStyle.css
@@ -14,3 +14,9 @@ body{
     background-color: transparent;
     border-bottom: crimson 1px solid;
 }
+
+footer{
+    width: 100%;
+    position: absolute;
+    text-align: center;
+}
