--- a/css/capelloStyle.css
+++ b/css/capelloStyle.css
@@ -44,6 +44,16 @@ a:hover {
     text-transform: capitalize;
 }
 
+section {
+    margin-left: auto;
+    margin-right: auto;
+    border: 5px;
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    min-height: 60px;
+}
+
 #fotoGaleria {
     margin-left: auto;
     margin-right: auto;
