css intento galeria

--- a/css/capelloStyle.css
+++ b/css/capelloStyle.css
@@ -1,5 +1,13 @@
+html {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
 body {
+    max-width: 1000px;
+    margin: 0 auto;
     background-color: lightgray;
+    font-family: Arial;
 }
 
 #logo {
