--- a/css/capelloStyle.css
+++ b/css/capelloStyle.css
@@ -1,10 +1,10 @@
 html {
-    max-width: 1000px;
+    max-width: auto;
     margin: 0 auto;
 }
 
 body {
-    max-width: 1000px;
+    max-width: auto;
     margin: 0 auto;
     background-color: lightgray;
     font-family: Arial;
