--- a/css/capelloStyle.css
+++ b/css/capelloStyle.css
@@ -1,11 +1,9 @@
 html {
-    max-width: auto;
-    margin: 0 auto;
+    margin: 2% auto;
 }
 
 body {
-    max-width: auto;
-    margin: 0 auto;
+    margin: 5% auto;
     background-color: lightgray;
     font-family: Arial;
 }
@@ -72,7 +70,7 @@ section {
     flex-wrap: wrap;
     justify-content: space-between;
     flex-grow: 1;
-    width: 95%;
+    width: 90%;
 }
 
 .galeria {
